Bug 32369 - [frv] macro "DF_LIVE_IN" passed 2 arguments, but takes just 1
Summary: [frv] macro "DF_LIVE_IN" passed 2 arguments, but takes just 1
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.3.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-06-16 17:28 UTC by Mike Stein
Modified: 2007-06-21 12:49 UTC (History)
3 users (show)

See Also:
Host: i686-pc-gnu-linux
Target: frv-elf
Build: i686-pc-gnu-linux
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Stein 2007-06-16 17:28:04 UTC
Hello,
there seems to be a problem compiling frv-elf-gcc:

gcc -c   -g -O2 -DIN_GCC -DCROSS_DIRECTORY_STRUCTURE  -W -Wall -Wwrite-strings -Wstrict-prototypes -Wmissing-prototypes -Wold-style-definition -Wmissing-format-attribute -pedantic -Wno-long-long -Wno-variadic-macros 				     -Wno-overlength-strings -fno-common   -DHAVE_CONFIG_H -I. -I. -I/n/07/mstein/svn/trunk/gcc -I/n/07/mstein/svn/trunk/gcc/. -I/n/07/mstein/svn/trunk/gcc/../include -I/n/07/mstein/svn/trunk/gcc/../libcpp/include  -I/n/07/mstein/svn/trunk/gcc/../libdecnumber -I/n/07/mstein/svn/trunk/gcc/../libdecnumber/dpd -I../libdecnumber    \
	/n/07/mstein/svn/trunk/gcc/config/frv/frv.c -o frv.o
/n/07/mstein/svn/trunk/gcc/config/frv/frv.c:5297:58: error: macro "DF_LIVE_IN" passed 2 arguments, but takes just 1
/n/07/mstein/svn/trunk/gcc/config/frv/frv.c:5301:54: error: macro "DF_LIVE_IN" passed 2 arguments, but takes just 1
/n/07/mstein/svn/trunk/gcc/config/frv/frv.c:5305:54: error: macro "DF_LIVE_IN" passed 2 arguments, but takes just 1
/n/07/mstein/svn/trunk/gcc/config/frv/frv.c:5327:77: error: macro "DF_LIVE_IN" passed 2 arguments, but takes just 1
/n/07/mstein/svn/trunk/gcc/config/frv/frv.c:5371:75: error: macro "DF_LIVE_IN" passed 2 arguments, but takes just 1
/n/07/mstein/svn/trunk/gcc/config/frv/frv.c:6026:31: error: macro "DF_LIVE_IN" passed 2 arguments, but takes just 1
/n/07/mstein/svn/trunk/gcc/config/frv/frv.c:6034:28: error: macro "DF_LIVE_IN" passed 2 arguments, but takes just 1

host gcc -v
Using built-in specs.
Target: i686-pc-linux-gnu
Configured with: /home/mstein/svn/trunk/configure --enable-languages=c --disable-nls --prefix=/n/07/mstein/host-gcc/trunk-2007-06-16
Thread model: posix
gcc version 4.3.0 20070615 (experimental)

Tested revision: 125747
Last succesfull build revision: 125595
Comment 1 Kenneth Zadeck 2007-06-16 17:45:27 UTC
Subject: Re:   New: [frv] macro "DF_LIVE_IN" passed 2 arguments,
 but takes just 1

mstein at phenix dot rootshell dot be wrote:
> Hello,
> there seems to be a problem compiling frv-elf-gcc:
>
> gcc -c   -g -O2 -DIN_GCC -DCROSS_DIRECTORY_STRUCTURE  -W -Wall -Wwrite-strings
> -Wstrict-prototypes -Wmissing-prototypes -Wold-style-definition
> -Wmissing-format-attribute -pedantic -Wno-long-long -Wno-variadic-macros       
>                               -Wno-overlength-strings -fno-common  
> -DHAVE_CONFIG_H -I. -I. -I/n/07/mstein/svn/trunk/gcc
> -I/n/07/mstein/svn/trunk/gcc/. -I/n/07/mstein/svn/trunk/gcc/../include
> -I/n/07/mstein/svn/trunk/gcc/../libcpp/include 
> -I/n/07/mstein/svn/trunk/gcc/../libdecnumber
> -I/n/07/mstein/svn/trunk/gcc/../libdecnumber/dpd -I../libdecnumber    \
>         /n/07/mstein/svn/trunk/gcc/config/frv/frv.c -o frv.o
> /n/07/mstein/svn/trunk/gcc/config/frv/frv.c:5297:58: error: macro "DF_LIVE_IN"
> passed 2 arguments, but takes just 1
> /n/07/mstein/svn/trunk/gcc/config/frv/frv.c:5301:54: error: macro "DF_LIVE_IN"
> passed 2 arguments, but takes just 1
> /n/07/mstein/svn/trunk/gcc/config/frv/frv.c:5305:54: error: macro "DF_LIVE_IN"
> passed 2 arguments, but takes just 1
> /n/07/mstein/svn/trunk/gcc/config/frv/frv.c:5327:77: error: macro "DF_LIVE_IN"
> passed 2 arguments, but takes just 1
> /n/07/mstein/svn/trunk/gcc/config/frv/frv.c:5371:75: error: macro "DF_LIVE_IN"
> passed 2 arguments, but takes just 1
> /n/07/mstein/svn/trunk/gcc/config/frv/frv.c:6026:31: error: macro "DF_LIVE_IN"
> passed 2 arguments, but takes just 1
> /n/07/mstein/svn/trunk/gcc/config/frv/frv.c:6034:28: error: macro "DF_LIVE_IN"
> passed 2 arguments, but takes just 1
>
> host gcc -v
> Using built-in specs.
> Target: i686-pc-linux-gnu
> Configured with: /home/mstein/svn/trunk/configure --enable-languages=c
> --disable-nls --prefix=/n/07/mstein/host-gcc/trunk-2007-06-16
> Thread model: posix
> gcc version 4.3.0 20070615 (experimental)
>
> Tested revision: 125747
> Last succesfull build revision: 125595
>
>
>   
sorry about that.

change all instances of that from DF_LIVE_IN to df_get_live_in and get
rid of the first parameter. 
Comment 2 patchapp@dberlin.org 2007-06-18 09:55:22 UTC
Subject: Bug number PR target/32369

A patch for this bug has been added to the patch tracker.
The mailing list url for the patch is http://gcc.gnu.org/ml/gcc-patches/2007-06/msg01225.html
Comment 3 Kenneth Zadeck 2007-06-18 13:18:45 UTC
Subject: Re:  [frv] macro "DF_LIVE_IN" passed 2 arguments,
 but takes just 1

:reviewmail:

patchapp at dberlin dot org wrote:
> ------- Comment #2 from patchapp at dberlin dot org  2007-06-18 09:55 -------
> Subject: Bug number PR target/32369
>
> A patch for this bug has been added to the patch tracker.
> The mailing list url for the patch is
> http://gcc.gnu.org/ml/gcc-patches/2007-06/msg01225.html
>
>
>   
ok for commit.

thanks

kenny
Comment 4 Rask Ingemann Lambertsen 2007-06-19 16:30:20 UTC
Subject: Bug 32369

Author: rask
Date: Tue Jun 19 16:30:03 2007
New Revision: 125851

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=125851
Log:
2007-06-19  Rask Ingemann Lambertsen  <rask@sygehus.dk>

	PR target/32369
	* config/frv/frv.c (frv_ifcvt_modify_tests): Dataflow merge fix.
	(frv_ifcvt_modify_insn): Likewise.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/frv/frv.c

Comment 5 Kenneth Zadeck 2007-06-21 12:49:14 UTC
this was fixed with the commit.