re PR target/32369 ([frv] macro "DF_LIVE_IN" passed 2 arguments, but takes just 1)

2007-06-19  Rask Ingemann Lambertsen  <rask@sygehus.dk>

	PR target/32369
	* config/frv/frv.c (frv_ifcvt_modify_tests): Dataflow merge fix.
	(frv_ifcvt_modify_insn): Likewise.

From-SVN: r125851